Undo latest change - Bug still persisting (white space on right)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ html,body {
     }
 
     .navbar-end {
-        padding-right: 20px;
+        margin-right: 20px;
     }
 
     .fa-envelope {
